# apiomorophic

./: .gitignore  README.md  __init__.py  pyproject.toml  test_apiomorphic.py
src/apiomorphic/: __init__.py  core.py
tests/: test_apiomorphic.py
