[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apiomorphic"
version = "0.1.0"
authors = [
{name = "Matt Miguel", email="mmiguel6288@gmail.com"},
]
description="Convert between LLM API formats"
readme="README.md"
requires-python = ">=3.10"
dependencies=[]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]

[project.urls]
"Homepage"="https://github.com/mmiguel6288/apiomorphic"
"Bug Tracker"="https://github.com/mmiguel6288/apiomorphic/issues"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
pythonpath = [
    "src"
]
markers = [
"integration: marks test as integration tests"
]
